<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center"
    tools:context=".QuestionsActivity">

    <TextView
        android:id="@+id/questionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/questions"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/questionYes"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/check"
            android:text="@string/yes" />

        <Button
            android:id="@+id/questionNo"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:drawableLeft="@drawable/cross"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>