<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/imageChangeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">
        <RadioButton
            android:id="@+id/radioCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat"
            android:checked="true"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog"
            android:textStyle="bold"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/imageContainer"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/cat" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:id="@+id/ratingBar"/>

    <Button
        android:id="@+id/imageChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

</LinearLayout>